--- a/utils-v13/build.gradle
+++ b/utils-v13/build.gradle
@@ -174,3 +174,18 @@ bintray {
   }
 
 }
+
+def repo = new File(rootDir, "repository")
+
+apply plugin: 'maven'
+
+uploadArchives {
+  repositories {
+    mavenDeployer {
+      repository url: "file://${repo.absolutePath}"
+      pom.version = '1.0.0'             // version
+      pom.groupId = 'tokyo.sakama'    // グループ名
+      pom.artifactId = 'smartTabLayout-utils-v13' // ライブラリ名
+    }
+  }
+}
